2020-08-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_*_object.c: Only set value if a pointer was passed to
      _get_position function:

          * src/object/o_arc_object.c
          * src/object/o_box_object.c
          * src/object/o_picture_object.c
          * src/object/o_pin_object.c

2020-08-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_*_object.c: Return FALSE instead of zero:

          * src/object/o_arc_object.c
          * src/object/o_box_object.c

    * src/object/o_text_object.c: Revise geda_text_object_get_position to
      only return TRUE if at least one value was set.

    * src/object/o_*_object.c: Only set value if a pointer was passed to
      _get_position function:

          * src/object/o_bus_object.c
          * src/object/o_circle_object.c
          * src/object/o_complex_object.c
          * src/object/o_net_object.c
          * src/object/o_path_object.c

2020-08-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_*_object.c: Revise *_get_position function to only
      return TRUE if at least one value was set:

          * src/object/o_arc_object.c
          * src/object/o_box_object.c
          * src/object/o_bus_object.c
          * src/object/o_circle_object.c
          * src/object/o_complex_object.c
          * src/object/o_net_object.c
          * src/object/o_path_object.c
          * src/object/o_picture_object.c
          * src/object/o_pin_object.c

2020-08-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_*_object.c: Rename Doxygen group without geda prefix:

          * src/object/o_arc_object.c; arc-object-proc
          * src/object/o_complex_object.c; complex-object-proc

2020-07-31 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_list.c: Rename Doxygen group without geda prefix;
      list-object-proc.

2020-07-24 Wiley E. Hill <wileyhill@gmail.com>

    * docs/images: Update "font-family" because the text is not visible in